[gd_scene load_steps=6 format=3 uid="uid://datka6xsds8ba"]

[ext_resource type="Theme" uid="uid://c8tp3l2ernw1i" path="res://fonts/guit_black_button_theme.tres" id="1_vb56u"]
[ext_resource type="Script" path="res://scenes/defineJobPanel/job_config.gd" id="2_wsjnb"]
[ext_resource type="Script" path="res://scenes/defineJobPanel/NParts.gd" id="3_s1t8p"]
[ext_resource type="Script" path="res://scenes/defineJobPanel/FileName.gd" id="3_ts2rl"]
[ext_resource type="Script" path="res://scenes/defineJobPanel/NRepetitions.gd" id="4_lknib"]

[node name="job_config" type="Control"]
custom_minimum_size = Vector2(1080, 1560)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vb56u")
script = ExtResource("2_wsjnb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="FileNameLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "fileName"

[node name="FileName" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "test"
script = ExtResource("3_ts2rl")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 9
theme_override_constants/v_separation = 19
columns = 3

[node name="NPartsLabel" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "number of parts"

[node name="NParts" type="HSlider" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 90)
layout_direction = 3
layout_mode = 2
min_value = 4.0
max_value = 8.0
value = 5.0
tick_count = 1
script = ExtResource("3_s1t8p")

[node name="EmptyLabel8" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="NRepetitionsLabel" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "number of repetitions"

[node name="NRepetitions" type="HSlider" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 90)
layout_mode = 2
min_value = 6.0
max_value = 10.0
value = 6.0
tick_count = 1
script = ExtResource("4_lknib")

[node name="EmptyLabel6" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="JobNameLabel" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="JobName" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EmptyLabel9" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="FinalInfo" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "aloha"
autowrap_mode = 2

[node name="WarnInfo" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
autowrap_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "create job"

[connection signal="value_changed" from="VBoxContainer/MarginContainer/GridContainer/NParts" to="VBoxContainer/MarginContainer/GridContainer/NParts" method="_on_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/GridContainer/NRepetitions" to="VBoxContainer/MarginContainer/GridContainer/NRepetitions" method="_on_value_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="save_job"]
